// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Carousel demos > demo: Autoplay 1`] = `
"<div class="ant-carousel ant-carousel-dots-bottom" role="region" aria-roledescription="carousel" tabindex="0">
  <div class="ant-carousel-container">
    <!-- Scrollx mode -->
    <div class="ant-carousel-track" style="transform: translateX(-16.666666666666668%); transition: none; width: 600%;">
      <!-- Clone last slide at beginning (for infinite) -->
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>4</h3>
        </div>
      </div><!-- Actual slides -->
      <div class="ant-carousel-slide ant-carousel-slide-active" style="width: 16.666666666666668%;" aria-hidden="false" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>1</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>2</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>3</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>4</h3>
        </div>
      </div><!-- Clone first slide at end (for infinite) -->
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>1</h3>
        </div>
      </div>
    </div>
  </div><!-- Dot indicators -->
  <ul class="ant-carousel-dots" role="tablist">
    <li class="ant-carousel-dot ant-carousel-dot-active" role="presentation"><button type="button" role="tab" aria-selected="true" aria-label="Slide 1"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 2"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 3"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 4"></button></li>
  </ul>
</div>"
`;

exports[`Carousel demos > demo: Basic 1`] = `
"<div class="ant-carousel ant-carousel-dots-bottom" role="region" aria-roledescription="carousel" tabindex="0">
  <div class="ant-carousel-container">
    <!-- Scrollx mode -->
    <div class="ant-carousel-track" style="transform: translateX(-16.666666666666668%); transition: none; width: 600%;">
      <!-- Clone last slide at beginning (for infinite) -->
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>4</h3>
        </div>
      </div><!-- Actual slides -->
      <div class="ant-carousel-slide ant-carousel-slide-active" style="width: 16.666666666666668%;" aria-hidden="false" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>1</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>2</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>3</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>4</h3>
        </div>
      </div><!-- Clone first slide at end (for infinite) -->
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>1</h3>
        </div>
      </div>
    </div>
  </div><!-- Dot indicators -->
  <ul class="ant-carousel-dots" role="tablist">
    <li class="ant-carousel-dot ant-carousel-dot-active" role="presentation"><button type="button" role="tab" aria-selected="true" aria-label="Slide 1"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 2"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 3"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 4"></button></li>
  </ul>
</div>"
`;

exports[`Carousel demos > demo: Fade 1`] = `
"<div class="ant-carousel ant-carousel-dots-bottom" role="region" aria-roledescription="carousel" tabindex="0">
  <div class="ant-carousel-container">
    <!-- Scrollx mode -->
    <!-- Fade mode -->
    <div class="ant-carousel-track ant-carousel-track-fade">
      <div class="ant-carousel-slide ant-carousel-slide-fade ant-carousel-slide-active" style="opacity: 1; transition: opacity 500ms ease;" aria-hidden="false" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>1</h3>
        </div>
      </div>
      <div class="ant-carousel-slide ant-carousel-slide-fade" style="opacity: 0; transition: opacity 500ms ease;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>2</h3>
        </div>
      </div>
      <div class="ant-carousel-slide ant-carousel-slide-fade" style="opacity: 0; transition: opacity 500ms ease;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>3</h3>
        </div>
      </div>
      <div class="ant-carousel-slide ant-carousel-slide-fade" style="opacity: 0; transition: opacity 500ms ease;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>4</h3>
        </div>
      </div>
    </div>
  </div><!-- Dot indicators -->
  <ul class="ant-carousel-dots" role="tablist">
    <li class="ant-carousel-dot ant-carousel-dot-active" role="presentation"><button type="button" role="tab" aria-selected="true" aria-label="Slide 1"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 2"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 3"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 4"></button></li>
  </ul>
</div>"
`;

exports[`Carousel demos > demo: Position 1`] = `
"<div style="margin-bottom: 16px; display: flex; gap: 8px;">
  <div class="ant-radio-group ant-radio-group-default ant-radio-group-outline" role="radiogroup"><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">top</span></label><label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><input type="radio" class="ant-radio-button-input" checked="" role="radio" aria-checked="true"><span class="ant-radio-button-inner">bottom</span></label><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">left</span></label><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">right</span></label></div>
</div>
<div class="ant-carousel ant-carousel-dots-bottom" role="region" aria-roledescription="carousel" tabindex="0" style="height: 200px;">
  <div class="ant-carousel-container">
    <!-- Scrollx mode -->
    <div class="ant-carousel-track" style="transform: translateX(-16.666666666666668%); transition: none; width: 600%;">
      <!-- Clone last slide at beginning (for infinite) -->
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>4</h3>
        </div>
      </div><!-- Actual slides -->
      <div class="ant-carousel-slide ant-carousel-slide-active" style="width: 16.666666666666668%;" aria-hidden="false" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>1</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>2</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>3</h3>
        </div>
      </div>
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true" role="tabpanel">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>4</h3>
        </div>
      </div><!-- Clone first slide at end (for infinite) -->
      <div class="ant-carousel-slide" style="width: 16.666666666666668%;" aria-hidden="true">
        <div class="carousel-slide" style="background: rgb(54, 77, 121);">
          <h3>1</h3>
        </div>
      </div>
    </div>
  </div><!-- Dot indicators -->
  <ul class="ant-carousel-dots" role="tablist">
    <li class="ant-carousel-dot ant-carousel-dot-active" role="presentation"><button type="button" role="tab" aria-selected="true" aria-label="Slide 1"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 2"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 3"></button></li>
    <li class="ant-carousel-dot" role="presentation"><button type="button" role="tab" aria-selected="false" aria-label="Slide 4"></button></li>
  </ul>
</div>"
`;
